@@ -134,7 +134,6 @@ class CGIHeaderTest < Test::Unit::TestCase
     ## 'nph' is true
     ENV['SERVER_SOFTWARE'] = 'Apache 2.2.0'
     actual1 = cgi.header('nph'=>true)
-    now = Time.now
     ## when old IIS, NPH-mode is forced
     ENV['SERVER_SOFTWARE'] = 'IIS/4.0'
     actual2 = cgi.header
@@ -144,9 +143,9 @@ class CGIHeaderTest < Test::Unit::TestCase
     actual4 = cgi.header
     actual5 = cgi.header('status'=>'REDIRECT', 'location'=>'http://www.example.com/')
     date = /^Date: [A-Z][a-z]{2}, \d{2} [A-Z][a-z]{2} \d{4} \d\d:\d\d:\d\d GMT\r\n/
-    [actual1,actual2,actual3].each do |actual|
-      assert_match(date,actual)
-      actual.sub!(date,"Date: DATE_IS_REMOVED\r\n")
+    [actual1, actual2, actual3].each do |actual|
+      assert_match(date, actual)
+      actual.sub!(date, "Date: DATE_IS_REMOVED\r\n")
     end
     ## assertion
     expected =  "HTTP/1.1 200 OK\r\n"
