@@ -1,3 +1,11 @@
+Wed Jul  6 18:10:13 2011  Shota Fukumori  <sorah@tubusu.net>
+
+	* test/cgi/test_cgi_header.rb(test_cgi_header_nph): Adding space after
+	  comma.
+
+	* test/cgi/test_cgi_header.rb(test_cgi_header_nph): Remove variable
+	  `now`. Suppress warning.
+
 Wed Jul  6 12:18:09 2011  Shota Fukumori  <sorah@tubusu.net>
 
 	* test/cgi/test_cgi_header.rb(test_cgi_header_nph): Fix bug depends to
